edit content home page

--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -93,7 +93,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 mb-5 mb-md-0" data-aos="fade-up" data-aos-delay="100">
-                    <h2 class="mb-5 h3" th:text="#{home.recent-job}">Recent Jobs</h2>
+                    <h2 class="mb-5 h3" th:text="#{home.recent-job}">Công Việc Mới</h2>
                     <div class="rounded border jobs-wrap">
                         <a href="job-single.html" class="job-item d-block d-md-flex align-items-center  border-bottom fulltime">
                             <div class="company-logo blank-logo text-center text-md-left pl-3">
@@ -101,19 +101,19 @@
                             </div>
                             <div class="job-details h-100">
                                 <div class="p-3 align-self-center">
-                                    <h3>Nhân viên chạy văn phòng</h3>
+                                    <h3>Chuyển nhà sinh viên</h3>
                                     <div class="d-block d-lg-flex">
                                         <div class="mr-3">
-                                            <span class="icon-user mr-1 text-purple"></span> Ng. Công
+                                            <span class="icon-user mr-1 text-purple"></span> Mr.D
                                         </div>
                                         <div class="mr-3">
                                             <span class="icon-room mr-1 text-pink"></span>
-                                            Phúc Diễn, Từ Liêm, Hà Nội
+                                            Mỹ Đình, Nam Từ Liêm, Hà Nội.
                                         </div>
                                         <div class="job-des-preview"
                                              th:title="'Công việc nhẹ nhàng! Lương ko phải nghĩ!'">
                                             <span class="icon-file-text mr-1 text-secondary"></span>
-                                            Công việc nhẹ nhàng! Lương ko phải nghĩ!
+                                            Dọn đồ, chuyển đồ đến nơi mới Xuân Thuỷ, Cầu Giấy.
                                         </div>
                                     </div>
                                 </div>
@@ -130,19 +130,19 @@
                             </div>
                             <div class="job-details h-100">
                                 <div class="p-3 align-self-center">
-                                    <h3>Nhân viên chạy văn phòng</h3>
+                                    <h3>Chuyển văn thư</h3>
                                     <div class="d-block d-lg-flex">
                                         <div class="mr-3">
-                                            <span class="icon-user mr-1 text-purple"></span> Ng. Công
+                                            <span class="icon-user mr-1 text-purple"></span> Ms. Thu
                                         </div>
                                         <div class="mr-3">
                                             <span class="icon-room mr-1 text-pink"></span>
-                                            Phúc Diễn, Từ Liêm, Hà Nội
+                                            Hoàn Kiếm, Hà Nội.
                                         </div>
                                         <div class="job-des-preview"
-                                             th:title="'Công việc nhẹ nhàng! Lương ko phải nghĩ!'">
-                                            <span class="icon-file-text mr-1 text-secondary"></span>
-                                            Công việc nhẹ nhàng! Lương ko phải nghĩ!
+                                             th:title="'Công việc nhẹ nhàng!'">
+                                            <span class="icon-file-text mr-1 text-secondary">Chuyển 2 thư qua Hai Bà Trưng, Hà Nội.</span>
+
                                         </div>
                                     </div>
                                 </div>
@@ -159,19 +159,19 @@
                             </div>
                             <div class="job-details h-100">
                                 <div class="p-3 align-self-center">
-                                    <h3>Nhân viên chạy văn phòng</h3>
+                                    <h3>Dọn nhà Riêng</h3>
                                     <div class="d-block d-lg-flex">
                                         <div class="mr-3">
-                                            <span class="icon-user mr-1 text-purple"></span> Ng. Công
+                                            <span class="icon-user mr-1 text-purple"></span> Mr. Cương
                                         </div>
                                         <div class="mr-3">
                                             <span class="icon-room mr-1 text-pink"></span>
-                                            Phúc Diễn, Từ Liêm, Hà Nội
+                                            Ba Đình, Hà Nội
                                         </div>
                                         <div class="job-des-preview"
                                              th:title="'Công việc nhẹ nhàng! Lương ko phải nghĩ!'">
                                             <span class="icon-file-text mr-1 text-secondary"></span>
-                                            Công việc nhẹ nhàng! Lương ko phải nghĩ!
+                                            Dọn dẹp lau sàn nhà 3 tầng, lau của kính 4 phòng.
                                         </div>
                                     </div>
                                 </div>
@@ -190,61 +190,6 @@
                             <th:block th:text="#{home.show-more}"> </th:block>
                         </a>
                     </div>
-                </div>
-                <div class="col-md-12 block-16" data-aos="fade-up" data-aos-delay="200">
-                    <div class="d-flex mb-0">
-                        <h2 class="mb-5 h3 mb-0">Featured Jobs</h2>
-                        <div class="ml-auto mt-1"><a href="#" class="owl-custom-prev">Prev</a> / <a href="#" class="owl-custom-next">Next</a></div>
-                    </div>
-
-                    <div class="nonloop-block-16 owl-carousel">
-
-                        <div class="border rounded p-4 bg-white">
-                            <h2 class="h5">Restaurant Crew</h2>
-                            <p><span class="border border-warning rounded p-1 px-2 text-warning">Freelance</span></p>
-                            <p>
-                                <span class="d-block"><span class="icon-suitcase"></span> Resto Bar</span>
-                                <span class="d-block"><span class="icon-room"></span> Florida</span>
-                                <span class="d-block"><span class="icon-money mr-1"></span> $55000 &mdash; 70000</span>
-                            </p>
-                            <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi neque fugit tempora, numquam voluptate veritatis odit id, iste eum culpa alias, ut officiis omnis itaque ad, rem sunt doloremque molestias.</p>
-                        </div>
-
-                        <div class="border rounded p-4 bg-white">
-                            <h2 class="h5">Javascript Fullstack Developer</h2>
-                            <p><span class="border border-warning rounded p-1 px-2 text-warning">Freelance</span></p>
-                            <p>
-                                <span class="d-block"><span class="icon-suitcase"></span> Resto Bar</span>
-                                <span class="d-block"><span class="icon-room"></span> Florida</span>
-                                <span class="d-block"><span class="icon-money mr-1"></span> $55000 &mdash; 70000</span>
-                            </p>
-                            <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus accusamus necessitatibus praesentium voluptate natus excepturi rerum, autem. Magnam laboriosam, quam sapiente laudantium iure sit ea! Tenetur, quasi, praesentium. Architecto, eum.</p>
-                        </div>
-
-                        <div class="border rounded p-4 bg-white">
-                            <h2 class="h5">Assistant Brooker, Real Estate</h2>
-                            <p><span class="border border-warning rounded p-1 px-2 text-warning">Freelance</span></p>
-                            <p>
-                                <span class="d-block"><span class="icon-suitcase"></span> Resto Bar</span>
-                                <span class="d-block"><span class="icon-room"></span> Florida</span>
-                                <span class="d-block"><span class="icon-money mr-1"></span> $55000 &mdash; 70000</span>
-                            </p>
-                            <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus esse, quam consectetur ipsum quibusdam ullam ab nesciunt, doloribus voluptatum neque iure perspiciatis vel vero illo consequatur facilis, fuga nobis corporis.</p>
-                        </div>
-
-                        <div class="border rounded p-4 bg-white">
-                            <h2 class="h5">Telecommunication Manager</h2>
-                            <p><span class="border border-warning rounded p-1 px-2 text-warning">Freelance</span></p>
-                            <p>
-                                <span class="d-block"><span class="icon-suitcase"></span> Resto Bar</span>
-                                <span class="d-block"><span class="icon-room"></span> Florida</span>
-                                <span class="d-block"><span class="icon-money mr-1"></span> $55000 &mdash; 70000</span>
-                            </p>
-                            <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid at ipsum commodi hic, cum esse asperiores libero molestiae, perferendis consectetur assumenda iusto, dolorem nemo maiores magnam illo laborum sit, dicta.</p>
-                        </div>
-
-                    </div>
-
                 </div>
             </div>
         </div>
@@ -301,13 +246,13 @@
                 <div class="text-center p-4 item border-right" data-aos="fade">
                     <span class="flaticon-worker display-3 mb-3 d-block text-primary"></span>
                     <h2 class="h4">Mạng lưới Tasker lớn</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati reprehenderit explicabo quos fugit vitae dolorum.</p>
+                    <p>TaskUnite có lượng nhân sự lớn, được phân bổ đều trên các Quận Huyện Thành Phố Hà Nội.</p>
                     <p><a href="#">Read More <span class="icon-arrow-right small"></span></a></p>
                 </div>
                 <div class="text-center p-4 item" data-aos="fade">
                     <span class="flaticon-wrench display-3 mb-3 d-block text-primary"></span>
                     <h2 class="h4">Đa dạng công việc</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati reprehenderit explicabo quos fugit vitae dolorum.</p>
+                    <p>TaskUnite cung cấp các dịch vụ như Sửa chữa , lắp đặt, dọn dẹp ,..., các công việc gần gũi nhất với cuộc sống.</p>
                     <p><a href="#">Read More <span class="icon-arrow-right small"></span></a></p>
                 </div>
             </div>
@@ -315,13 +260,13 @@
                 <div class="text-center p-4 item border-right" data-aos="fade">
                     <span class="flaticon-stethoscope display-3 mb-3 d-block text-primary"></span>
                     <h2 class="h4">Bảo hiểm đầy đủ</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati reprehenderit explicabo quos fugit vitae dolorum.</p>
+                    <p>Bạn giao việc không cần phải lo lắng về chất lượng dịch vụ cũng như giá cả .</p>
                     <p><a href="#">Read More <span class="icon-arrow-right small"></span></a></p>
                 </div>
                 <div class="text-center p-4 item" data-aos="fade">
                     <span class="flaticon-calculator display-3 mb-3 d-block text-primary"></span>
                     <h2 class="h4">Thu nhập cao</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati reprehenderit explicabo quos fugit vitae dolorum.</p>
+                    <p>Tasker được tiếp cận nguồn công việc, tối ưu được thời gian làm việc tăng thu nhập cao.</p>
                     <p><a href="#">Read More <span class="icon-arrow-right small"></span></a></p>
                 </div>
             </div>
