update button & input  view home, login, register

--- a/src/main/resources/templates/account/login.html
+++ b/src/main/resources/templates/account/login.html
@@ -50,7 +50,12 @@
                         </div>
                         <div class="row form-group">
                             <div class="col-md-12 text-center">
-                                <input type="submit" value="Đăng Nhập" class="btn btn-primary  py-2 px-5">
+                                <button type="submit" class="btn-reset-css btn-svg-UI fill-green">
+                                    <svg>
+                                        <rect></rect>
+                                    </svg>
+                                    <span>Đăng nhập</span>
+                                </button>
                             </div>
                         </div>
                     </form>
