--- a/src/main/resources/static/css/task/create.css
+++ b/src/main/resources/static/css/task/create.css
@@ -1362,7 +1362,7 @@ div.name {
   font-weight: 500;
   color: #818181;
   transition: 0.5s;
-  background: transparent;
+  background: #f9f9f9;
   cursor: pointer;
   line-height: 40px;
 }
@@ -1390,13 +1390,12 @@ div.name {
   top: 0;
   left: 0;
   fill: transparent;
-
 }
 
 .btn-svg-UI svg rect {
   stroke: #818181;
   stroke-width: 4;
-  transition: 1s;
+  transition: .5s;
   stroke-dasharray: 200, 40;
 }
 
@@ -1410,7 +1409,7 @@ div.name {
 .btn-svg-UI:hover svg rect {
   stroke: #fff;
   stroke-dasharray: 40, 200;
-  stroke-dashoffset: 280;
+  stroke-dashoffset: 300;
 }
 
 #form-task input.form-control {
@@ -1425,42 +1424,6 @@ div.name {
   box-shadow: 0 0 18px 0px rgba(81, 175, 51, 0.59) !important;
 }
 
-.btn-svg-UI.animation-svg-infinite{
-  background: #51af33;
-  color: #fff;
-  box-shadow: 0 0 18px 0px rgba(81, 175, 51, 0.59) !important;
-  height: 45px;
-}
-
-
-.btn-svg-UI.animation-svg-infinite svg rect{
-  animation: animate-svg 2s linear infinite;
-  stroke-dasharray: 120;
-  stroke: #fff;
-  transition: 1.5s;
-}
-
-.btn-svg-UI.animation-svg-infinite:hover svg rect{
-  stroke: #818181;
-  stroke-dasharray: 0;
-  stroke-dashoffset: 0;
-  animation-play-state: paused;
-}
-
-.btn-svg-UI.animation-svg-infinite:hover{
-  background: transparent;
-  color: #818181;
-  box-shadow: none;
-}
-
-@keyframes animate-svg {
-  0%{
-    stroke-dashoffset: 480;
-  }
-  100%{
-    stroke-dashoffset: 0;
-  }
-}
 
 
 
